# single-flow-ai-asistant

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
code_examples/: memori-langchain_integration_for_longterm-memory.py
demos/: demo_carousel_gallery.html  demo_image_gallery.html  demo_topic_injection.py  test_combo_functionality.html
docs/: BUG-FIXES.log.md  ContinuosConversationPromptStruct.md  implementation_plan_structured_prompt_system.md  implementation_plan_v0.1.md  implementation_plan_v0.2.md  longterm-memory-system-implementation-recomendations.md  memori-readmi.md  streaming_optimization_summary.md  tech-task.md
packaging/: build.py
src/: main.py
src/core/: agent_state_manager.py  audio_provider.py  context_aggregator.py  controller.py  file_ingestor.py  intent_analyzer.py  llm_topic_analyzer.py  logging_config.py  memory_adapter.py  memory_management.py  project_manager.py  prompt_builder.py  settings.py  tool_set_manager.py  topic_matcher.py  topic_storage.py  topic_tools.py  topic_tracker.py  user_profile_manager.py  vector_manager.py
src/langchain_adapters/: __init__.py  deep_agent_integration.py  enhanced_llm_adapter.py  llm_adapter.py  tools.py
src/ui/: __init__.py  audio_controls.py  base_web_view.py  chat_web_view.py  files_web_view.py  main_window.py  memory_web_view.py  process_indicator.py  prompt_web_view.py  (+1 more)
tests/: __init__.py  test_controller.py  test_deep_agent_integration.py  test_image_processing.py  test_improved_topic_system.py  test_streaming_optimization.py  test_topic_context_fetching.py  test_topic_injection.py  test_topic_system_fix.py  test_topic_tracker.py  verify_controller_integration.py
(+16 files in other folders)
