[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-assistant"
version = "0.3.0"
description = "Single-Flow Personal Assistant with PyQt6 and LangChain"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "PyQt6>=6.5.0",
    "langchain>=0.2.0",
    "langchain-openai",
    "langchain-community",
    "langchain-text-splitters",
    "langchain-tavily",
    "faiss-cpu",
    "python-dotenv",
    "PyPDF2",
    "python-docx",
    "memorisdk",
    "openai",
    "SpeechRecognition",
    "Pillow>=10.0.0",
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
]
requires-python = ">=3.9"
readme = "README.md"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".tox",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "PyQt6.*",
    "faiss.*",
    "chromadb.*",
]
ignore_missing_imports = true
